[package]
name = "lox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
quickcheck = "1.0.3"                     # Automatic property based testing with shrinking.
quickcheck_macros = "1.0.0"              # A macro attribute for quickcheck.
arbitrary = { version = "1.1.0", features = ["derive"] } 
                                         # The trait for generating structured data from unstructured data
